force-app/main/default/objects/OneOnOne__c/OneOnOne__c.object-meta.xml
<CustomObject>
    <description>Storage layer for recurring 1:1 meeting infrastructure. Each 1:1 between manager and direct report is a record. Notes, action items, and follow-ups are tracked here so the cadence becomes a system rather than relying on memory.</description>
    <label>1:1</label>
    <nameField>
        <displayFormat>1on1-{YYYY}-{0000}</displayFormat>
        <label>1:1 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1:1s</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>