force-app/main/default/objects/OneOnOne__c/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <label>Cadence</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>