force-app/main/default/objects/OneOnOne__c/fields/Direct_Report__c.field-meta.xml
<CustomField>
    <fullName>Direct_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Report</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OneOnOnes_DirectReport</relationshipName>
    <type>Lookup</type>
</CustomField>