force-app/main/default/objects/OneOnOne__c/fields/Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed__c</fullName>
    <label>Topics Discussed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>