force-app/main/default/objects/OneOnOne__c/fields/Watch_Items__c.field-meta.xml
<CustomField>
    <fullName>Watch_Items__c</fullName>
    <label>Watch Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>